preserve limits for sc labels plots
Former-commit-id: 8e3a9783f90b81159daed1d3c0fd3e7006ecd093 [formerly 1e8d2c15d75e611373077549ba0878393335ca1b]
Former-commit-id: 2d15456a9efc098af470bb269c54e0e97021e005
Former-commit-id: fb3805388727f9413019a425cbd5b8e61ce1897f

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -169,6 +169,7 @@ export(load_seq)
 export(merge_linkouts)
 export(navbarUI)
 export(normalize_scseq)
+export(pairwise_wilcox)
 export(pathForm)
 export(pathFormInput)
 export(pathPage)
@@ -245,6 +246,7 @@ export(showIntegrationButton)
 export(showLabelTransfer)
 export(showLabelTransferButton)
 export(srt_to_sce)
+export(srt_to_sce_shim)
 export(standardize_cellranger)
 export(strain_scseq)
 export(summarize_compound)
