rename scAnal to scSampleComparison for clarity
Former-commit-id: 51913d9aa733cf8a5a5913aaa2aca6c3c28d14d5 [formerly d0514ac4076f8d68cb487ee6ffb3df996760659e]
Former-commit-id: dad0c96e99be6ec3b3dccc4228e15661d59bdd3b
Former-commit-id: 02f7d12309d07f21186fbe49280b7f7767b96711

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -205,8 +205,6 @@ export(save_bulk_dataset)
 export(save_combined_scseq_reports)
 export(save_scseq_data)
 export(save_scseq_reports)
-export(scAnal)
-export(scAnalInput)
 export(scBioGpsPlot)
 export(scBioGpsPlotOutput)
 export(scClusterPlot)
@@ -217,6 +215,8 @@ export(scMarkerPlot)
 export(scMarkerPlotOutput)
 export(scPage)
 export(scPageUI)
+export(scSampleComparison)
+export(scSampleComparisonInput)
 export(scSelectedDataset)
 export(scSelectedDatasetInput)
 export(sc_dl_filename)
