fix sc sample comparisons for SCE
Former-commit-id: 307c98f142d8a9761ba494cc500bdf5f4c05e325 [formerly b3b640ea590b088249223f7dc8369a7ad6ed8cd0]
Former-commit-id: 0cd6d8a9ba4f4cd6d3d49e0155d9b7f18187d388
Former-commit-id: 1a706cb5f22ce42b537488dff1ae7f2b5abedeae

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,6 @@ export(add_es)
 export(add_hvgs)
 export(add_integrated_ambient)
 export(add_linkout)
-export(add_project_scseqs)
 export(add_redn)
 export(add_scseq_clusters)
 export(add_scseq_qc_metrics)
@@ -15,7 +14,6 @@ export(add_table_html)
 export(add_vsd)
 export(advancedOptions)
 export(advancedOptionsInput)
-export(ambient.omit)
 export(append_annot)
 export(boxPlotly)
 export(build_ensdb)
@@ -41,7 +39,6 @@ export(bulkPlotlyUI)
 export(bulkQuantTable)
 export(bulkTable)
 export(calcx)
-export(cca_integrate)
 export(check_gras)
 export(check_is_cellranger)
 export(clusterComparison)
@@ -127,7 +124,6 @@ export(get_pathway_heatmap)
 export(get_pct_ambient)
 export(get_pkg_version)
 export(get_pred_annot)
-export(get_scseq_assay)
 export(get_scseq_markers)
 export(get_scseq_whitelist)
 export(get_top)
@@ -221,8 +217,6 @@ export(scSelectedDataset)
 export(scSelectedDatasetInput)
 export(sc_dl_filename)
 export(scale_fill_names)
-export(scalign_integrate)
-export(scalign_to_scseq)
 export(scseq_part_path)
 export(select_contrast)
 export(select_pairs)
@@ -248,6 +242,7 @@ export(srt_to_sce_shim)
 export(standardize_cellranger)
 export(strain_scseq)
 export(summarize_compound)
+export(supress.genes)
 export(svaButton)
 export(tabPane)
 export(textInputWithButtons)
@@ -262,6 +257,5 @@ export(validate_integration)
 export(validate_pairs)
 export(validate_pdata)
 export(validate_reps)
-importFrom(SingleCellExperiment,colData)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!")
