fix order of markers; cleanup old code
Former-commit-id: d917cd80944c95384706ce0b85368b56ed7bc56c [formerly a49daba4079b8953e984bb78fc4e40b4d6c46ff9]
Former-commit-id: 0e8b52f03d0ec5f27cd921bd1ec99150a78a37e4
Former-commit-id: 5cf9b5a8cc65508a84de7452419a1657fe8df906

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(add_es)
 export(add_hvgs)
 export(add_integrated_ambient)
 export(add_linkout)
+export(add_scseq_clusters)
 export(add_scseq_qc_metrics)
 export(add_table_html)
 export(add_vsd)
@@ -113,6 +114,7 @@ export(get_label_transfer_choices)
 export(get_mds)
 export(get_mods)
 export(get_nearest_row)
+export(get_npc_choices)
 export(get_open_a)
 export(get_outliers)
 export(get_palette)
@@ -141,7 +143,6 @@ export(integrate_scseqs)
 export(integrationForm)
 export(integrationFormInput)
 export(iqr_replicates)
-export(jitter_umap)
 export(justifiedButtonGroup)
 export(labelTransferForm)
 export(labelTransferFormInput)
@@ -178,7 +179,6 @@ export(plot_tsne_gene)
 export(plotlyMDS)
 export(query_budger)
 export(query_drugs)
-export(reduce_dims)
 export(remove_bulk_anals)
 export(remove_dataset_files)
 export(remove_sva)
@@ -193,7 +193,7 @@ export(run_limma_scseq)
 export(run_lmfit_scseq)
 export(run_salmon_bulk)
 export(run_sva)
-export(run_umap)
+export(run_tsne)
 export(save_bulk_anals)
 export(save_bulk_dataset)
 export(save_combined_scseq_reports)
