hide sc/bulk dataset buttons until select existing
Former-commit-id: 3d61e00f607fc013ab3b56fbe8e41e316a323ea0 [formerly 2fa1420222047e0c6aa7d733a1c7252f3c2fcd5e]
Former-commit-id: 01de5288828e329588ce429f677a21a1f518ae2a
Former-commit-id: 4b5c32404e819ae400263a97ffc5fcf041cfb56b

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -231,10 +231,6 @@ export(selectedPertSignatureInput)
 export(selectizeInputWithButtons)
 export(selectizeInputWithValidation)
 export(setup_fdata)
-export(showIntegration)
-export(showIntegrationButton)
-export(showLabelTransfer)
-export(showLabelTransferButton)
 export(srt_to_sce_shim)
 export(standardize_cellranger)
 export(strain_scseq)
@@ -248,6 +244,7 @@ export(theme_dimgray)
 export(theme_no_xaxis)
 export(theme_no_yaxis)
 export(toggleAll)
+export(toggleSelectizeButtons)
 export(tsne_scseq_whitelist)
 export(validate_custom_query)
 export(validate_integration)
