init auto detect 10x chemistry
Former-commit-id: 95719c5d9c35eefdbdb23f5e888f4582fff76a30 [formerly fae39470e9acc9d49a75fdd45a386dde22053d06]
Former-commit-id: 47d975bcb0547827a7601db3d8eb6427f8fb0a8f
Former-commit-id: aaa43827add6c8be2d84b468374509aa56a02a63

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(construct_eset)
 export(construct_path_df)
 export(customQueryForm)
 export(customQueryFormInput)
+export(detect_10x_chemistry)
 export(detect_paired)
 export(diff_path)
 export(diff_path_scseq)
@@ -165,10 +166,6 @@ export(merge_linkouts)
 export(navbarUI)
 export(normalize_scseq)
 export(pairwise_wilcox)
-export(pathForm)
-export(pathFormInput)
-export(pathPage)
-export(pathPageUI)
 export(pick_roryk_cutoff)
 export(plot_biogps)
 export(plot_combined_scseq_report)
@@ -188,6 +185,7 @@ export(run_drug_queries)
 export(run_drugseqr)
 export(run_kallisto_bulk)
 export(run_kallisto_scseq)
+export(run_kallisto_scseq_commands)
 export(run_limma)
 export(run_limma_scseq)
 export(run_lmfit_scseq)
