--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,8 +27,10 @@ Imports:
     shinyjs (>= 1.0),
     shinyWidgets (>= 0.4.8),
     shinyFiles (>= 0.7.3),
-    scran (>= 1.12.0),
-    scater (>= 1.12.2),
+    SingleCellExperiment (>= 1.9.1),
+    SingleR (>= 1.1.6),
+    scran (>= 1.14.3),
+    scater (>= 1.15.12),
     Seurat (>= 3.0.1),
     sva (>= 3.32.1),
     magrittr (>= 1.5),
@@ -43,7 +45,6 @@ Imports:
     dtangle (>= 0.3.1),
     tibble (>= 2.0.1),
     MASS (>= 7.3.51.1),
-    PADOG,
     drugseqr.data
 Suggests: 
     testthat,
@@ -53,5 +54,4 @@ Depends:
     R (>= 3.6.0),
     data.table (>= 1.12.0)
 Remotes: 
-    alexvpickering/PADOG,
     hms-dbmi/drugseqr.data
