--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ SystemRequirements:
   kallisto (0.46.0)
 Imports:
     Biobase (>= 2.42.0),
+    batchelor (>= 1.3.9),
     dplyr (>= 0.7.8),
     tximport (>= 1.12.0),
     edgeR (>= 3.24.3),
