--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: drugseqr
 Type: Package
-Title: Finds CMAP02/L1000 Compounds That Oppose RNA-Seq Gene Expression Signatures.
-Version: 0.1.15
+Title: Finds CMAP02/L1000 Compounds That Oppose Gene Expression Signatures.
+Version: 0.1.16
 Author: Alex Pickering
 Maintainer: Alex Pickering <alexvpickering@gmail.com>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: Explore single-cell and bulk RNA-seq datasets and run queries against
+L1000 and CMAP02 signatures.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
@@ -38,11 +38,11 @@ Imports:
     Matrix.utils (>= 0.9.7),
     metaMA (>= 3.1.2),
     miniUI (>= 0.1.1.1),
-    mvoutlier (>= 2.0.9),
     plotly (>= 4.8.0),
     DT (>= 0.5),
     DropletUtils(>= 1.4.3),
     DESeq2 (>= 1.24.0),
+    doParallel (>= 1.0.15),
     dtangle (>= 0.3.1),
     tibble (>= 2.0.1),
     MASS (>= 7.3.51.1),
@@ -55,4 +55,6 @@ Depends:
     R (>= 3.6.0),
     data.table (>= 1.12.0)
 Remotes: 
-    hms-dbmi/drugseqr.data
+    hms-dbmi/drugseqr.data,
+    LTLA/batchelor,
+    LTLA/singular
