--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,7 @@ Title: Finds CMAP02/L1000 Compounds That Oppose Gene Expression Signatures.
 Version: 0.1.16
 Author: Alex Pickering
 Maintainer: Alex Pickering <alexvpickering@gmail.com>
-Description: Explore single-cell and bulk RNA-seq datasets and run queries against
-L1000 and CMAP02 signatures.
+Description: Explore single-cell and bulk RNA-seq datasets and run queries against L1000 and CMAP02 signatures.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
@@ -20,8 +19,10 @@ Imports:
     tximport (>= 1.12.0),
     edgeR (>= 3.24.3),
     ggplot2 (>= 3.1.0),
+    GO.db (>= 3.10.0),
     factoextra (>= 1.0.5),
     limma (>= 3.40.2),
+    org.Hs.eg.db (>= 3.10.0),
     randomcoloR (>= 1.1.0),
     shiny (>= 1.2.0),
     shinyBS (>= 0.61),
@@ -57,4 +58,5 @@ Depends:
 Remotes: 
     hms-dbmi/drugseqr.data,
     LTLA/batchelor,
-    LTLA/singular
+    LTLA/SingleR,
+    Bioconductor/BiocGenerics
