--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: drugseqr
 Type: Package
 Title: Finds CMAP02/L1000 Compounds That Oppose Gene Expression Signatures.
-Version: 0.1.16
+Version: 0.1.17
 Author: Alex Pickering
 Maintainer: Alex Pickering <alexvpickering@gmail.com>
 Description: Explore single-cell and bulk RNA-seq datasets and run queries against L1000 and CMAP02 signatures.
@@ -16,14 +16,28 @@ Imports:
     Biobase (>= 2.42.0),
     batchelor (>= 1.3.9),
     dplyr (>= 0.7.8),
-    tximport (>= 1.12.0),
+    DT (>= 0.5),
+    DropletUtils(>= 1.4.3),
+    DESeq2 (>= 1.24.0),
+    doParallel (>= 1.0.15),
+    dtangle (>= 0.3.1),
+    drugseqr.data,
     edgeR (>= 3.24.3),
-    ggplot2 (>= 3.1.0),
-    GO.db (>= 3.10.0),
     factoextra (>= 1.0.5),
+    ggplot2 (>= 3.1.0),
+    ggridges (>= 0.5.1),
+    GO.db (>= 3.10.0),
+    igraph (> = 1.2.4.2),
     limma (>= 3.40.2),
     org.Hs.eg.db (>= 3.10.0),
+    magrittr (>= 1.5),
+    Matrix.utils (>= 0.9.7),
+    MASS (>= 7.3.51.1),
+    metaMA (>= 3.1.2),
+    miniUI (>= 0.1.1.1),
+    plotly (>= 4.8.0),
     randomcoloR (>= 1.1.0),
+    robustbase (>= 0.93.5),
     shiny (>= 1.2.0),
     shinyBS (>= 0.61),
     shinyjs (>= 1.0),
@@ -35,19 +49,8 @@ Imports:
     scater (>= 1.15.12),
     Seurat (>= 3.0.1),
     sva (>= 3.32.1),
-    magrittr (>= 1.5),
-    Matrix.utils (>= 0.9.7),
-    metaMA (>= 3.1.2),
-    miniUI (>= 0.1.1.1),
-    plotly (>= 4.8.0),
-    DT (>= 0.5),
-    DropletUtils(>= 1.4.3),
-    DESeq2 (>= 1.24.0),
-    doParallel (>= 1.0.15),
-    dtangle (>= 0.3.1),
-    tibble (>= 2.0.1),
-    MASS (>= 7.3.51.1),
-    drugseqr.data
+    tximport (>= 1.12.0),
+    tibble (>= 2.0.1)
 Suggests: 
     testthat,
     AnnotationDbi (>= 1.44.0),
