cache wilcox test results to scale 1vs1 cluster comparisons
Former-commit-id: e5ec699047b6b6523518d38bded19f1a4f311a3a [formerly c97c73644a2d74966b5ef4ce4c487616bc06228c]
Former-commit-id: f8294cb1ba0dfd232853ad0bc640609a04d1824c
Former-commit-id: 7e6498db9b8e5d904bae89e203d2f068423056cc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ export(get_cell_choices)
 export(get_cluster_choices)
 export(get_cluster_stats)
 export(get_contrast_choices)
+export(get_contrast_markers)
 export(get_cors_html)
 export(get_diverge)
 export(get_dprimes)
