get pbulk working; init pseudobulk plot
Former-commit-id: bb34fe31ca2bbc62c67035dc9a67b8c77c389af1 [formerly 78c0f1719f09b5a2a62903396feae62494fdd38a]
Former-commit-id: 62a731f9c661e06c0ccaa23268b91cf6673d7ed4
Former-commit-id: 15460eb18b85e9dc8af0ce99372ef435a17747c2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,8 +50,6 @@ export(customQueryForm)
 export(customQueryFormInput)
 export(detect_10x_chemistry)
 export(detect_paired)
-export(diff_path)
-export(diff_path_scseq)
 export(dl_10x_whitelists)
 export(dl_pert_result)
 export(dl_pert_signature)
@@ -126,7 +124,7 @@ export(get_scseq_markers)
 export(get_scseq_whitelist)
 export(get_top)
 export(get_top_cors)
-export(get_top_table)
+export(get_top_tables)
 export(get_tx2gene)
 export(get_wikipedia)
 export(hiddenDownload)
@@ -182,7 +180,6 @@ export(run_kallisto_scseq)
 export(run_kallisto_scseq_commands)
 export(run_limma)
 export(run_limma_scseq)
-export(run_lmfit_scseq)
 export(run_salmon_bulk)
 export(run_sva)
 export(run_tsne)
@@ -209,7 +206,6 @@ export(select_contrast)
 export(select_pairs)
 export(selectedAnal)
 export(selectedAnalInput)
-export(selectedAnnot)
 export(selectedAnnotDatasetInput)
 export(selectedDrugStudy)
 export(selectedDrugStudyInput)
