revert to split sample gene plot when only two samples integrated
Former-commit-id: 96170dcd0a345e0766acea5af9b814440aedd23d [formerly db685fb3375d7e79df314a574485109dc8b65814]
Former-commit-id: baac02d078355ebf53422d50d6cbaf181021941b
Former-commit-id: 25dfa4693659c0ad5760fcd17f6a2ae359a4ff11

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -165,6 +165,7 @@ export(pick_roryk_cutoff)
 export(plot_biogps)
 export(plot_tsne_cluster)
 export(plot_tsne_gene)
+export(plot_tsne_gene_sample)
 export(plotlyMDS)
 export(query_budger)
 export(query_drugs)
