improve memory usage for integration
Former-commit-id: db157b6601ae03e45f43d9da373fb7de044dcb4e [formerly cb36f315f66048facb47585e7602d6194af3a79e]
Former-commit-id: 00d0bb2ed93e4667fd9ef1e4602296e8ab4498c6
Former-commit-id: 1a4f1e40aa97b5b92a4504e1ede2a6787dffeb90

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(comparisonType)
 export(comparisonTypeToggle)
 export(construct_eset)
 export(construct_path_df)
+export(construct_pbulk_eset)
 export(customQueryForm)
 export(customQueryFormInput)
 export(detect_10x_chemistry)
@@ -88,6 +89,7 @@ export(get_boxplotly_cell_args)
 export(get_boxplotly_gene_args)
 export(get_cell_choices)
 export(get_cluster_choices)
+export(get_cluster_markers)
 export(get_cluster_stats)
 export(get_contrast_choices)
 export(get_contrast_markers)
