faster drug queries
Former-commit-id: 09dcaed7313fc3d0f4f36947eef62b6b69345ce4 [formerly 44b5008b0ea9091f8a300209f375fda07efc817d]
Former-commit-id: afbdd90a50bff0126134c6f62b3331ec4eb3441f
Former-commit-id: 6a49de6a92fad27772eb1964d5bfa5c5c6e99545

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(construct_path_df)
 export(construct_pbulk_eset)
 export(customQueryForm)
 export(customQueryFormInput)
+export(decide_ambient)
 export(detect_10x_chemistry)
 export(detect_paired)
 export(dl_10x_whitelists)
@@ -84,7 +85,6 @@ export(fit_lm_scseq)
 export(geom_hist_whitelist)
 export(geom_tsne)
 export(get_10x_whitepath)
-export(get_ambient)
 export(get_boxplotly_cell_args)
 export(get_boxplotly_gene_args)
 export(get_cell_choices)
@@ -150,6 +150,7 @@ export(load_bulk_datasets)
 export(load_cellranger_counts)
 export(load_custom_anals)
 export(load_custom_results)
+export(load_drug_es)
 export(load_kallisto_counts)
 export(load_pert_anals)
 export(load_pert_signature)
