add kegga results to pathway analysis
Former-commit-id: 29ed6119789f3cd6fffd82b25e62ae21e810b4ca [formerly 50543ecf73f0b352a8266d79cc4cc51e54b3cfa5]
Former-commit-id: 40d23105cfbbf82aa201dc199d03cf24d3a60fec
Former-commit-id: 968c5fb7558380d8f56d942d8b910f90bf80da60

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -118,6 +118,7 @@ export(get_outliers)
 export(get_palette)
 export(get_path_df)
 export(get_path_directions)
+export(get_path_res)
 export(get_pathway_heatmap)
 export(get_pct_ambient)
 export(get_pkg_version)
