fixing bugs and add progress bars
Former-commit-id: d82abe5a2558d3e1cee2f23331b1c46eec0a7d14 [formerly cedaecbe42374137281f69a80b2b0a46bd7aefa9]
Former-commit-id: ab1b62391458edcfa9c0e157fa9481dac1f20f0f
Former-commit-id: aeef5a9465d5edbb79e1adb0e4d41175b804ae7e

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -190,6 +190,7 @@ export(run_sva)
 export(run_tsne)
 export(save_bulk_anals)
 export(save_bulk_dataset)
+export(save_lmfit)
 export(save_scseq_data)
 export(scBioGpsPlot)
 export(scBioGpsPlotOutput)
