--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: drugseqr
 Type: Package
 Title: Finds CMAP02/L1000 Compounds That Oppose Gene Expression Signatures.
-Version: 0.1.20
+Version: 0.1.21
 Author: Alex Pickering
 Maintainer: Alex Pickering <alexvpickering@gmail.com>
 Description: Explore single-cell and bulk RNA-seq datasets and run queries against L1000 and CMAP02 signatures.
@@ -27,6 +27,7 @@ Imports:
     ggplot2 (>= 3.1.0),
     ggridges (>= 0.5.1),
     GO.db (>= 3.10.0),
+    hdf5r (>= 1.3.1),
     igraph (>= 1.2.4.2),
     limma (>= 3.40.2),
     org.Hs.eg.db (>= 3.10.0),
@@ -47,7 +48,6 @@ Imports:
     SingleR (>= 1.1.6),
     scran (>= 1.14.3),
     scater (>= 1.15.12),
-    Seurat (>= 3.0.1),
     sva (>= 3.32.1),
     tximport (>= 1.12.0),
     tibble (>= 2.0.1)
