--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,18 +13,18 @@ biocViews:
 SystemRequirements:
   kallisto (0.46.0)
 Imports:
-    Biobase (>= 2.42.0),
+    Biobase (>= 2.46.0),
     batchelor (>= 1.3.9),
-    dplyr (>= 0.7.8),
-    DT (>= 0.5),
-    DropletUtils(>= 1.4.3),
-    DESeq2 (>= 1.24.0),
+    dplyr (>= 0.8.3),
+    DT (>= 0.11),
+    DropletUtils(>= 1.6.1),
+    DESeq2 (>= 1.26.0),
     doParallel (>= 1.0.15),
-    dtangle (>= 0.3.1),
+    dtangle (>= 2.0.9),
     drugseqr.data,
-    edgeR (>= 3.24.3),
-    factoextra (>= 1.0.5),
-    ggplot2 (>= 3.1.0),
+    edgeR (>= 3.28.0),
+    factoextra (>= 1.0.6),
+    ggplot2 (>= 3.2.1),
     ggridges (>= 0.5.1),
     GO.db (>= 3.10.0),
     hdf5r (>= 1.3.1),
@@ -33,33 +33,39 @@ Imports:
     org.Hs.eg.db (>= 3.10.0),
     magrittr (>= 1.5),
     Matrix.utils (>= 0.9.7),
-    MASS (>= 7.3.51.1),
+    MASS (>= 7.3.51.4),
     metaMA (>= 3.1.2),
     miniUI (>= 0.1.1.1),
-    plotly (>= 4.8.0),
-    randomcoloR (>= 1.1.0),
+    plotly (>= 4.9.1),
+    randomcoloR (>= 1.1.0.1),
     robustbase (>= 0.93.5),
-    shiny (>= 1.2.0),
+    rlang (>= 0.4.3),
+    shiny (>= 1.4.0),
     shinyBS (>= 0.61),
-    shinyjs (>= 1.0),
-    shinyWidgets (>= 0.4.8),
-    shinyFiles (>= 0.7.3),
+    shinyjs (>= 1.1),
+    shinyWidgets (>= 0.5.0),
+    shinyFiles (>= 0.7.5),
     SingleCellExperiment (>= 1.9.1),
     SingleR (>= 1.1.6),
-    scran (>= 1.14.3),
+    scran (>= 1.14.5),
     scater (>= 1.15.12),
-    sva (>= 3.32.1),
-    tximport (>= 1.12.0),
-    tibble (>= 2.0.1)
+    sva (>= 3.34.0),
+    tximport (>= 1.14.0),
+    tibble (>= 2.1.3)
 Suggests: 
     testthat,
-    AnnotationDbi (>= 1.44.0),
-    ensembldb (>= 2.8.0)
+    AnnotationDbi (>= 1.48.0),
+    ensembldb (>= 2.8.1)
 Depends: 
     R (>= 3.6.0),
-    data.table (>= 1.12.0)
+    data.table (>= 1.12.8)
 Remotes: 
     hms-dbmi/drugseqr.data,
     LTLA/batchelor,
     LTLA/SingleR,
-    Bioconductor/BiocGenerics
+    LTLA/BiocSingular,
+    LTLA/SingleCellExperiment,
+    davismcc/scater,
+    Bioconductor/BiocGenerics,
+    Bioconductor/DelayedArray,
+    Bioconductor/S4Vectors
