fix mobile issues
Former-commit-id: d96574f86d8b2373d291d4c162aa0dd553f86989 [formerly 4234d4f1162eed2bf28214b4092ed0bb61ebfec0]
Former-commit-id: d46fc43bef1e06d98945f6151a9281d17a53299d
Former-commit-id: d5ffad0a42ced61a688cabe566d1673174bfb704

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,7 +35,7 @@ export(bulkFormInput)
 export(bulkFormQuant)
 export(bulkFormQuantInput)
 export(bulkGenePlotly)
-export(bulkMDSplotly)
+export(bulkMDS)
 export(bulkPage)
 export(bulkPageUI)
 export(bulkPlotlyUI)
