allow doublet score as feature to plot
Former-commit-id: 78db7507460398f67cb4838d59dec5754c7a380e [formerly f2f13bb82c27762d7cf37fd885e3deb1118c53eb]
Former-commit-id: bdd9e5c7bc398f4c798ef587ac1f8f5af569b37d
Former-commit-id: c8ff1bc047dd9e19f31df91db36ccd6798eb21f8

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(NoLegend)
 export(Read10X)
 export(Read10X_h5)
 export(add_adjusted)
+export(add_doublet_score)
 export(add_es)
 export(add_hvgs)
 export(add_integrated_ambient)
