seperate pbulk esets/fit by cluster
Former-commit-id: 5ce68ed0f8aa96bec340339cb8fada99cb5c6167 [formerly 67445bdb57437b9ad6a2ee681a270f0e35530029]
Former-commit-id: 45571f2b808cf0f3d89734059aee5f3bdd508f47
Former-commit-id: 9d8c12810f43503c0d1a11878822893f239cdd98

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,7 +52,7 @@ export(comparisonType)
 export(comparisonTypeToggle)
 export(construct_eset)
 export(construct_path_df)
-export(construct_pbulk_eset)
+export(construct_pbulk_esets)
 export(customQueryForm)
 export(customQueryFormInput)
 export(decide_ambient)
@@ -129,7 +129,7 @@ export(get_scseq_markers)
 export(get_scseq_whitelist)
 export(get_top)
 export(get_top_cors)
-export(get_top_tables)
+export(get_top_table)
 export(get_tx2gene)
 export(get_wikipedia)
 export(hiddenDownload)
