adding support for mouse
Former-commit-id: e7f6571632c2c4a98379fdb59b16b27dfd6ec653 [formerly 451e3998f9edc9bcbf858a52b4e17ff4f547636b]
Former-commit-id: b015d1a525e6f84eaafe831dd6015101a577c5c8
Former-commit-id: b649b15097dadee4bdf381a4c625a065db94a41e

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,6 +127,7 @@ export(get_pkg_version)
 export(get_pred_annot)
 export(get_scseq_markers)
 export(get_scseq_whitelist)
+export(get_species)
 export(get_top)
 export(get_top_cors)
 export(get_top_table)
