--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(customQueryFormInput)
 export(decide_ambient)
 export(detect_10x_chemistry)
 export(detect_paired)
+export(diff_abundance)
 export(dl_10x_whitelists)
 export(dl_pert_result)
 export(dl_pert_signature)
