add loom support (for large datasets)
Former-commit-id: 9326b21d8c807ec36748a4335c7c7e8e720219dd [formerly 9dc97cb77943d73438eafb9cf7d56ddecfb5c2d8]
Former-commit-id: b1b00058d90c65a33f45892463dbd2504b803062
Former-commit-id: f3e0350e1fdc865154258114065d8bad4440ceb3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(comparisonTypeToggle)
 export(construct_eset)
 export(construct_path_df)
 export(construct_pbulk_esets)
+export(create_scseq)
 export(customQueryForm)
 export(customQueryFormInput)
 export(decide_ambient)
@@ -158,7 +159,6 @@ export(load_drug_es)
 export(load_kallisto_counts)
 export(load_pert_anals)
 export(load_pert_signature)
-export(load_saved_scseq)
 export(load_scseq)
 export(load_scseq_datasets)
 export(load_scseq_qcgenes)
@@ -194,6 +194,7 @@ export(run_tsne)
 export(save_bulk_anals)
 export(save_bulk_dataset)
 export(save_lmfit)
+export(save_scle)
 export(save_scseq_data)
 export(scBioGpsPlot)
 export(scBioGpsPlotOutput)
