filter doublets during load; refactor processing raw sc data
Former-commit-id: 149c6c4999c87c3a04ba684b0cd80b23d505e6c0 [formerly 0d40d50a0f5fe4c9cb7fca123d7244bade89a4a0]
Former-commit-id: 0602b9ab8d91e9242295706d73e28a747636a4b7
Former-commit-id: f8c5d0aa3b36aedc679a691c1ab68ed99ae3185f

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ export(dtangleFormInput)
 export(exist_clusters)
 export(exploreEset)
 export(extract_section_info)
+export(filter_doublets)
 export(fit_ebayes)
 export(fit_lm_scseq)
 export(get_10x_whitepath)
@@ -159,6 +160,7 @@ export(load_drug_es)
 export(load_kallisto_counts)
 export(load_pert_anals)
 export(load_pert_signature)
+export(load_raw_scseq)
 export(load_scseq)
 export(load_scseq_datasets)
 export(load_scseq_qcgenes)
