change knee so that guarantee to converge
now progressively cuts 10% least expressing droplets until roryk knee and knee and closer than knee and inflection by a factor of 2
maximum iterations is 100


Former-commit-id: 59bc90a9f6c14b7363a7932e5c8e17995889ae28 [formerly d63f9c32ee279b613c091727f8d3110e9f4290d9]
Former-commit-id: a57754704118c40addd22d5bef148201a5a676d6
Former-commit-id: 72f8a5588fbf2f3b5fe06dde627d99b100d78253

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ export(exist_clusters)
 export(exploreEset)
 export(extract_section_info)
 export(filter_doublets)
+export(find_knee)
 export(fit_ebayes)
 export(fit_lm_scseq)
 export(get_10x_whitepath)
