--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,6 +100,7 @@ export(get_cluster_stats)
 export(get_contrast_choices)
 export(get_contrast_markers)
 export(get_cors_html)
+export(get_dist)
 export(get_dprimes)
 export(get_drug_paths)
 export(get_drugbank)
