--- a/NAMESPACE
+++ b/NAMESPACE
@@ -111,7 +111,10 @@ export(get_fastq_id1s)
 export(get_gene_choices)
 export(get_group_colors)
 export(get_group_levels)
+export(get_gs.names)
+export(get_gslist)
 export(get_integrated_ambient)
+export(get_kegg_species)
 export(get_label_plot)
 export(get_label_transfer_choices)
 export(get_mds)
