allow plotting QC metrics; remove doublet auto filter (manual better)
Former-commit-id: d8f9ef62b1284e3c37b0172eea24b1104d52a1a9 [formerly a69433b98ea34280618afa05f5175ea69f8ad550]
Former-commit-id: d25fe249a799fe6b663ad5e6d06f2686903c594b
Former-commit-id: 5f5d015b927c69ea0410ec4035c4a2d6b6ee28dc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(add_integrated_ambient)
 export(add_linkout)
 export(add_scseq_clusters)
 export(add_scseq_qc_metrics)
+export(add_scseq_qcplot_metrics)
 export(add_table_html)
 export(add_vsd)
 export(advancedOptions)
@@ -174,8 +175,8 @@ export(normalize_scseq)
 export(pairwise_wilcox)
 export(plot_biogps)
 export(plot_tsne_cluster)
-export(plot_tsne_gene)
-export(plot_tsne_gene_sample)
+export(plot_tsne_feature)
+export(plot_tsne_feature_sample)
 export(plotlyMDS)
 export(query_budger)
 export(query_drugs)
