--- a/NAMESPACE
+++ b/NAMESPACE
@@ -178,6 +178,7 @@ export(plot_tsne_cluster)
 export(plot_tsne_feature)
 export(plot_tsne_feature_sample)
 export(plotlyMDS)
+export(process_raw_scseq)
 export(query_budger)
 export(query_drugs)
 export(remove_bulk_anals)
