check for validity of bulk design
Former-commit-id: 292149263c86ee588b65ecc7b7399246eb9e0cd3 [formerly a70ed6f5fe195225222cfbc75eed7e40a19f2a44]
Former-commit-id: 956b4eabec0afc9c8313a4648dd450842686d687
Former-commit-id: 55e4b18c4822f4036ee1693a56a4df4c82219d6f

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(customQueryForm)
 export(customQueryFormInput)
 export(decide_ambient)
 export(detect_10x_chemistry)
+export(detect_cells)
 export(detect_paired)
 export(diff_abundance)
 export(dl_10x_whitelists)
@@ -88,7 +89,6 @@ export(dtangleFormInput)
 export(exist_clusters)
 export(exploreEset)
 export(extract_section_info)
-export(filter_doublets)
 export(fit_ebayes)
 export(fit_lm_scseq)
 export(get_10x_whitepath)
@@ -132,7 +132,6 @@ export(get_pct_ambient)
 export(get_pkg_version)
 export(get_pred_annot)
 export(get_scseq_markers)
-export(get_scseq_whitelist)
 export(get_species)
 export(get_top)
 export(get_top_cors)
@@ -194,6 +193,7 @@ export(run_kallisto_scseq_commands)
 export(run_limma)
 export(run_limma_scseq)
 export(run_salmon_bulk)
+export(run_scseq_qc)
 export(run_sva)
 export(run_tsne)
 export(save_bulk_anals)
