allow subset on metric
Former-commit-id: 1611498eb8f2ef401e41a636a126820573e7b4f2 [formerly 3b2028723cdd21be0ee8cd4a21c121e08a22aa01]
Former-commit-id: 19d7f014d37cd0a77528a73c9ae84ada630f986a
Former-commit-id: 872acfa8a5e85baba5bf6ce5c9f9fee863a4fd2b

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,6 +119,7 @@ export(get_kegg_species)
 export(get_label_plot)
 export(get_label_transfer_choices)
 export(get_mds)
+export(get_metric_choices)
 export(get_mods)
 export(get_nearest_row)
 export(get_npc_choices)
