check if predictions are from overwritten datasets
Former-commit-id: ba8c1736bfe3f2d6d4e68a33ef5960d25e262cd6 [formerly ad41fe72c8a355f66bfc5f7b6b74ce86263200c6]
Former-commit-id: 5ea8d719b82a2a7a487d1f29a93fcc5312b0347f
Former-commit-id: 3ad7b361092e906a100e13d3ee7f324b6fb6d5d4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -248,6 +248,7 @@ export(validate_custom_query)
 export(validate_integration)
 export(validate_pairs)
 export(validate_pdata)
+export(validate_preds)
 export(validate_reps)
 importFrom(cowplot,theme_cowplot)
 importFrom(ggplot2,aes_string)
