renaming things; serialize subset/integration arguments
Former-commit-id: b10237bbd29d17809735093267286eb1baa7869c [formerly 7ae69669eee7db0402d0512ca6f6157ae0532cf3]
Former-commit-id: 41ee6bbd580fa13974b286ea8300db7ed6bdfc1b
Former-commit-id: 95f08a938c85b93c5538d65a39b0e35f63dd9077

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ export(detect_10x_chemistry)
 export(detect_cells)
 export(detect_paired)
 export(diff_abundance)
+export(disableAll)
 export(dl_10x_whitelists)
 export(dl_pert_result)
 export(dl_pert_signature)
@@ -86,6 +87,7 @@ export(drugsTable)
 export(drugsTableOutput)
 export(dtangleForm)
 export(dtangleFormInput)
+export(enableAll)
 export(exist_clusters)
 export(exploreEset)
 export(extract_section_info)
@@ -167,7 +169,7 @@ export(load_raw_scseq)
 export(load_scseq)
 export(load_scseq_datasets)
 export(load_scseq_qcgenes)
-export(load_scseqs_for_integration)
+export(load_scseq_subsets)
 export(load_seq)
 export(merge_linkouts)
 export(navbarUI)
@@ -201,6 +203,7 @@ export(save_bulk_anals)
 export(save_bulk_dataset)
 export(save_lmfit)
 export(save_scle)
+export(save_scseq_args)
 export(save_scseq_data)
 export(scBioGpsPlot)
 export(scBioGpsPlotOutput)
@@ -242,7 +245,6 @@ export(textInputWithValidation)
 export(theme_dimgray)
 export(theme_no_xaxis)
 export(theme_no_yaxis)
-export(toggleAll)
 export(toggleSelectizeButtons)
 export(validate_custom_query)
 export(validate_integration)
