convert custom metric input to textarea
Former-commit-id: 78514f28314b7467ab69b1115f6772b9456c7569 [formerly 8ea5e1677c98beabb6604a5fb67374bf25ae2d25]
Former-commit-id: a614f590751b44af86ef2830ac079349db37cacf
Former-commit-id: e7cf718884a31a9dd7471107f66e0673030e4cca

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -240,6 +240,7 @@ export(summarize_compound)
 export(supress.genes)
 export(svaButton)
 export(tabPane)
+export(textAreaInputWithButtons)
 export(textInputWithButtons)
 export(textInputWithValidation)
 export(theme_dimgray)
