--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: drugseqr
 Type: Package
 Title: Finds CMAP02/L1000 Compounds That Oppose Gene Expression Signatures.
-Version: 0.1.45
+Version: 0.1.46
 Author: Alex Pickering
 Maintainer: Alex Pickering <alexvpickering@gmail.com>
 Description: Explore single-cell and bulk RNA-seq datasets and run queries against L1000 and CMAP02 signatures.
@@ -27,8 +27,10 @@ Imports:
     ggridges (>= 0.5.1),
     GO.db (>= 3.10.0),
     hdf5r (>= 1.3.1),
+    harmony (>= 1.0),
     igraph (>= 1.2.4.2),
     limma (>= 3.40.2),
+    liger (>= 0.5.0.9000),
     org.Hs.eg.db (>= 3.10.0),
     org.Mm.eg.db (>= 3.10.0),
     magrittr (>= 1.5),
@@ -37,6 +39,7 @@ Imports:
     miniUI (>= 0.1.1.1),
     plotly (>= 4.9.1),
     randomcoloR (>= 1.1.0.1),
+    robustbase (>= 0.93.5),
     rlang (>= 0.4.3),
     shiny (>= 1.4.0),
     shinyBS (>= 0.61),
