--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(comparisonTypeToggle)
 export(construct_eset)
 export(construct_path_df)
 export(construct_pbulk_esets)
+export(construct_pbulk_qcsets)
 export(create_scseq)
 export(customQueryForm)
 export(customQueryFormInput)
