--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(NoLegend)
 export(Read10X)
 export(Read10X_h5)
 export(add_adjusted)
+export(add_combined_metrics)
 export(add_doublet_score)
 export(add_es)
 export(add_hvgs)
@@ -75,7 +76,6 @@ export(downloadablePlot)
 export(downloadablePlotUI)
 export(downloadablePlotly)
 export(downloadablePlotlyUI)
-export(dprimesPlotly)
 export(dropdownButton)
 export(dropdownMenuButton)
 export(drugsForm)
@@ -89,6 +89,7 @@ export(drugsTableOutput)
 export(dtangleForm)
 export(dtangleFormInput)
 export(enableAll)
+export(evaluate_custom_metric)
 export(exist_clusters)
 export(exploreEset)
 export(extract_section_info)
@@ -112,6 +113,7 @@ export(get_drugs_table)
 export(get_ensdb_package)
 export(get_exclude_choices)
 export(get_fastq_id1s)
+export(get_founder)
 export(get_gene_choices)
 export(get_group_colors)
 export(get_group_levels)
@@ -123,6 +125,7 @@ export(get_label_plot)
 export(get_label_transfer_choices)
 export(get_mds)
 export(get_metric_choices)
+export(get_metric_features)
 export(get_mods)
 export(get_nearest_row)
 export(get_npc_choices)
@@ -135,6 +138,7 @@ export(get_path_res)
 export(get_pct_ambient)
 export(get_pkg_version)
 export(get_pred_annot)
+export(get_sc_dataset_choices)
 export(get_scseq_markers)
 export(get_species)
 export(get_top)
@@ -144,6 +148,7 @@ export(get_tx2gene)
 export(get_wikipedia)
 export(hiddenDownload)
 export(hiddenDownloadUI)
+export(html_space)
 export(id_from_tab)
 export(identify_sc_files)
 export(import_quants)
@@ -152,7 +157,9 @@ export(integrate_saved_scseqs)
 export(integrate_scseqs)
 export(integrationForm)
 export(integrationFormInput)
+export(interpret)
 export(iqr_replicates)
+export(isTruthyAll)
 export(justifiedButtonGroup)
 export(labelTransferForm)
 export(labelTransferFormInput)
@@ -177,6 +184,10 @@ export(navbarUI)
 export(normalize_scseq)
 export(pairwise_wilcox)
 export(plot_biogps)
+export(plot_cluster_labels)
+export(plot_dprimes)
+export(plot_ridge)
+export(plot_scseq_dprimes)
 export(plot_tsne_cluster)
 export(plot_tsne_feature)
 export(plot_tsne_feature_sample)
@@ -184,22 +195,28 @@ export(plotlyMDS)
 export(process_raw_scseq)
 export(query_budger)
 export(query_drugs)
+export(readRDS.safe)
 export(remove_bulk_anals)
 export(remove_dataset_files)
 export(remove_sva)
 export(rightClickMenu)
 export(run_custom_query)
+export(run_dream)
 export(run_drug_queries)
 export(run_drugseqr)
+export(run_fastmnn)
+export(run_harmony)
 export(run_kallisto_bulk)
 export(run_kallisto_scseq)
 export(run_kallisto_scseq_commands)
+export(run_liger)
 export(run_limma)
 export(run_limma_scseq)
 export(run_salmon_bulk)
 export(run_scseq_qc)
 export(run_sva)
 export(run_tsne)
+export(run_varPart)
 export(save_bulk_anals)
 export(save_bulk_dataset)
 export(save_lmfit)
@@ -212,12 +229,16 @@ export(scClusterPlot)
 export(scClusterPlotOutput)
 export(scForm)
 export(scFormInput)
+export(scLabelsComparison)
+export(scLabelsPlot)
 export(scMarkerPlot)
 export(scMarkerPlotOutput)
 export(scPage)
 export(scPageUI)
+export(scRidgePlot)
 export(scSampleComparison)
 export(scSampleComparisonInput)
+export(scSampleMarkerPlot)
 export(scSelectedDataset)
 export(scSelectedDatasetInput)
 export(sc_dl_filename)
@@ -237,6 +258,8 @@ export(selectizeInputWithButtons)
 export(selectizeInputWithValidation)
 export(setup_fdata)
 export(standardize_cellranger)
+export(subsetForm)
+export(subset_saved_scseq)
 export(summarize_compound)
 export(supress.genes)
 export(svaButton)
@@ -250,6 +273,7 @@ export(theme_no_yaxis)
 export(toggleSelectizeButtons)
 export(validate_custom_query)
 export(validate_integration)
+export(validate_metric)
 export(validate_pairs)
 export(validate_pdata)
 export(validate_preds)
