shorten cluster labels if many instead of remove
Former-commit-id: e7fdc11c9988e1ecd3f37d7046a66ecb0d4b6a42 [formerly 18446e340cf50fdd9dc379bc1610a731ca848726]
Former-commit-id: 4e9eaf511e92f2c5dbed87dbcf886c53319bb802
Former-commit-id: ff5b1aeee6748679843ee429e2cd47024bcd2759

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -257,6 +257,7 @@ export(selectedPertSignatureInput)
 export(selectizeInputWithButtons)
 export(selectizeInputWithValidation)
 export(setup_fdata)
+export(shorten_cluster_labels)
 export(standardize_cellranger)
 export(subsetForm)
 export(subset_saved_scseq)
