error handling when missing index; closes #159
Former-commit-id: b8a50baf82a1453e41dddc2a94ef88ccd5151fb3 [formerly 61360337e5588e911948f6db44e52fd46fc55fb0]
Former-commit-id: 2c5d446f19810afb8b825335ad93545e58a6cc93
Former-commit-id: 4d4f09f800e520f28cefe513afa21d9a07da1df0

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -120,6 +120,7 @@ export(get_group_levels)
 export(get_gs.names)
 export(get_gslist)
 export(get_integrated_ambient)
+export(get_kallisto_index)
 export(get_kegg_species)
 export(get_label_plot)
 export(get_label_transfer_choices)
