filter bulk after group selection; closes #163
Former-commit-id: 839544d2effab77166593a38dfaab1b45916c9bf [formerly 62b25ead5552b7541cf2315e0dfcc252a17d9c10]
Former-commit-id: 85916d70894e8fc2ccf160d0f5ea168805e0845c
Former-commit-id: 84b5209f34403c35428ac4ed74b41d04eb79cb35

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ export(evaluate_custom_metric)
 export(exist_clusters)
 export(exploreEset)
 export(extract_section_info)
+export(filter_genes)
 export(fit_ebayes)
 export(fit_lm_scseq)
 export(get_10x_whitepath)
