ingest crossmeta output for microarrays; closes #161
Former-commit-id: 1f5380c9071a24260f803facc0b822f683a23919 [formerly 06dbb014020e81001bb38c0f2bba7fe0fa61e99d]
Former-commit-id: adc3f7c870f3e192e45d8e39183a8e1fb1956b62
Former-commit-id: 5e7ee2de2c4fad97c6c65a1fa989b190b6416fec

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -96,6 +96,7 @@ export(extract_section_info)
 export(filter_genes)
 export(fit_ebayes)
 export(fit_lm_scseq)
+export(from_crossmeta)
 export(get_10x_whitepath)
 export(get_boxplotly_cell_args)
 export(get_boxplotly_gene_args)
