init rintrojs for single-cell page
Former-commit-id: 372404f505020a1586b642a2bc10df623a3d2281 [formerly 491efb37be5d2e5f4726592f074ab24e8ed88281]
Former-commit-id: cf8cfe7ec7e20fabab00cdc8e2149eb89fb65fda
Former-commit-id: 1da06ac33c4cc762e14166bdab61270f00df3253

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,6 +40,7 @@ Imports:
     plotly (>= 4.9.1),
     randomcoloR (>= 1.1.0.1),
     rlang (>= 0.4.3),
+    rintrojs (>=0.2.2),
     shiny (>= 1.4.0),
     shinyBS (>= 0.61),
     shinyjs (>= 1.1),
