update docs; use shinydlplot
Former-commit-id: f5b982b6fe1f722af1e560d429197d987b046025 [formerly 511d6363d82fba6c54f9d292d8f8055bae30c493]
Former-commit-id: e04a258ba127c3df97287069bbb8666ef42fa6ef
Former-commit-id: e34dfc13d8ec1e5e1f848299c2a634b84cf374bf

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,9 +59,11 @@ Suggests:
     ensembldb (>= 2.8.1)
 Depends: 
     R (>= 3.6.0),
-    data.table (>= 1.12.8)
+    data.table (>= 1.12.8),
+    shinydlplot (>= 0.1.0),
 Remotes: 
     hms-dbmi/drugseqr.data,
+    alexvpickering/shinydlplot,
     LTLA/batchelor,
     LTLA/SingleR,
     LTLA/BiocSingular,
