--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,8 @@ export(boxPlotly)
 export(build_ensdb)
 export(bulkAnal)
 export(bulkAnalInput)
+export(bulkAnnot)
+export(bulkAnnotInput)
 export(bulkCellsPlotly)
 export(bulkDataset)
 export(bulkDatasetInput)
@@ -39,12 +41,14 @@ export(bulkFormQuant)
 export(bulkFormQuantInput)
 export(bulkGenePlotly)
 export(bulkMDS)
+export(bulkMDSplotly)
 export(bulkPage)
 export(bulkPageUI)
 export(bulkPlotlyUI)
 export(bulkQuantTable)
 export(bulkTable)
 export(calcx)
+export(check_bulk_changed)
 export(check_gras)
 export(check_is_cellranger)
 export(clusterComparison)
@@ -72,10 +76,6 @@ export(docsPageUI)
 export(docsSection)
 export(docsSideNav)
 export(docsSubsection)
-export(downloadablePlot)
-export(downloadablePlotUI)
-export(downloadablePlotly)
-export(downloadablePlotlyUI)
 export(dropdownButton)
 export(dropdownMenuButton)
 export(drugsForm)
@@ -96,6 +96,8 @@ export(extract_section_info)
 export(filter_genes)
 export(fit_ebayes)
 export(fit_lm_scseq)
+export(format_dl_annot)
+export(format_up_annot)
 export(from_crossmeta)
 export(get_10x_whitepath)
 export(get_boxplotly_cell_args)
@@ -117,7 +119,6 @@ export(get_exclude_choices)
 export(get_fastq_id1s)
 export(get_founder)
 export(get_gene_choices)
-export(get_group_colors)
 export(get_group_levels)
 export(get_gs.names)
 export(get_gslist)
@@ -149,8 +150,6 @@ export(get_top_cors)
 export(get_top_table)
 export(get_tx2gene)
 export(get_wikipedia)
-export(hiddenDownload)
-export(hiddenDownloadUI)
 export(html_space)
 export(id_from_tab)
 export(identify_sc_files)
@@ -163,6 +162,7 @@ export(integrationFormInput)
 export(interpret)
 export(iqr_replicates)
 export(isTruthyAll)
+export(is_invertible)
 export(justifiedButtonGroup)
 export(labelTransferForm)
 export(labelTransferFormInput)
@@ -233,14 +233,17 @@ export(scForm)
 export(scFormInput)
 export(scLabelsComparison)
 export(scLabelsPlot)
+export(scLabelsPlotOutput)
 export(scMarkerPlot)
 export(scMarkerPlotOutput)
 export(scPage)
 export(scPageUI)
 export(scRidgePlot)
+export(scRidgePlotOutput)
 export(scSampleComparison)
 export(scSampleComparisonInput)
 export(scSampleMarkerPlot)
+export(scSampleMarkerPlotOutput)
 export(scSelectedDataset)
 export(scSelectedDatasetInput)
 export(sc_dl_filename)
@@ -262,6 +265,7 @@ export(setup_fdata)
 export(shorten_cluster_labels)
 export(standardize_cellranger)
 export(subsetForm)
+export(subsetFormInput)
 export(subset_saved_scseq)
 export(summarize_compound)
 export(supress.genes)
@@ -281,6 +285,7 @@ export(validate_pairs)
 export(validate_pdata)
 export(validate_preds)
 export(validate_reps)
+export(validate_up_annot)
 importFrom(cowplot,theme_cowplot)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,geom_raster)
