--- a/NAMESPACE
+++ b/NAMESPACE
@@ -150,6 +150,7 @@ export(get_top_cors)
 export(get_top_table)
 export(get_tx2gene)
 export(get_wikipedia)
+export(heatplot)
 export(html_space)
 export(id_from_tab)
 export(identify_sc_files)
