--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(detect_paired)
 export(diff_abundance)
 export(disableAll)
 export(dl_10x_whitelists)
+export(dl_pert_pvals)
 export(dl_pert_result)
 export(dl_pert_signature)
 export(docsPageUI)
