factor out add_path_genes to revigoR; init perturbation GO analyses
Former-commit-id: a98d0834b66d97825c40957e77f3247a7143c177 [formerly 76d97ce873919c2e214b90a67722f95414dbc67d]
Former-commit-id: 8cf9a17de8fcd5966893594ff87691b62bb0280f
Former-commit-id: 12b64def4a2c5e86bb4559a87ecf8b0bc4dc9c6f

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 .Rproj.user
 .Rhistory
 
+# perturbation GO analyses
+data-raw/drug_paths/results/*
+data-raw/drug_paths/tmp/*
+
 # contains raw IBD FASTQ files for dev purposes
 data-raw/patient_data/*
 data-raw/patient_data/*
