refactor formatting query result; add utility to format query result outside of app
Former-commit-id: ec4bb01c3388df429640c29506bdb29778902413 [formerly 1bd28194b0de359177f2bd352beb139564b03870]
Former-commit-id: 5703147a10aa6ec8b2cbf45d25ff23182cf4c355
Former-commit-id: 067348bd8a9fa410dfc939d33b1e1cce3c1ce8bb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(add_table_html)
 export(add_vsd)
 export(advancedOptions)
 export(advancedOptionsInput)
+export(annot_query_res)
 export(append_annot)
 export(boxPlotly)
 export(build_ensdb)
@@ -94,10 +95,13 @@ export(evaluate_custom_metric)
 export(exist_clusters)
 export(exploreEset)
 export(extract_section_info)
+export(filter_clinical)
 export(filter_genes)
+export(filter_nsig)
 export(fit_ebayes)
 export(fit_lm_scseq)
 export(format_dl_annot)
+export(format_query_res)
 export(format_up_annot)
 export(from_crossmeta)
 export(get_10x_whitepath)
@@ -143,6 +147,7 @@ export(get_path_res)
 export(get_pct_ambient)
 export(get_pkg_version)
 export(get_pred_annot)
+export(get_query_cols)
 export(get_sc_dataset_choices)
 export(get_scseq_markers)
 export(get_species)
@@ -263,10 +268,12 @@ export(selectedPertSignature)
 export(selectedPertSignatureInput)
 export(setup_fdata)
 export(shorten_cluster_labels)
+export(sort_query_table_clin)
 export(standardize_cellranger)
 export(subsetForm)
 export(subsetFormInput)
 export(subset_saved_scseq)
+export(summarise_query_table)
 export(summarize_compound)
 export(supress.genes)
 export(svaButton)
