switch custom query to uploaded signature; closes #165
Former-commit-id: 0c656894d90208573ac10cb87c2d0c97939e0b58 [formerly 95318c40b1fbbd7f0305fa5784dc13fd778e9c27]
Former-commit-id: b2a04dee18b39320aa70cc9316c406dde1ff5847
Former-commit-id: 3e244a01b128a61756f2cdce2a1e6aa71dc88b43

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,6 +103,7 @@ export(fit_lm_scseq)
 export(format_dl_annot)
 export(format_query_res)
 export(format_up_annot)
+export(format_up_custom)
 export(from_crossmeta)
 export(get_10x_whitepath)
 export(get_boxplotly_cell_args)
@@ -289,6 +290,7 @@ export(validate_pdata)
 export(validate_preds)
 export(validate_reps)
 export(validate_up_annot)
+export(validate_up_custom)
 importFrom(cowplot,theme_cowplot)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,geom_raster)
