--- a/NAMESPACE
+++ b/NAMESPACE
@@ -215,6 +215,7 @@ export(run_custom_query)
 export(run_dream)
 export(run_drug_queries)
 export(run_drugseqr)
+export(run_drugseqr_table)
 export(run_fastmnn)
 export(run_harmony)
 export(run_kallisto_bulk)
@@ -291,6 +292,7 @@ export(validate_preds)
 export(validate_reps)
 export(validate_up_annot)
 export(validate_up_custom)
+export(zakquery)
 importFrom(cowplot,theme_cowplot)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,geom_raster)
