--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -65,5 +65,6 @@ Depends:
 Remotes: 
     hms-dbmi/drugseqr.data,
     alexvpickering/shinydlplot,
-    alexvpickering/shinypanel
+    alexvpickering/shinypanel,
+    immunogenomics/harmony
     
