try to fix .dockerignore for autobuild
Former-commit-id: f58c637e2bac3848de21ef02113cab86fdce6543 [formerly 0a45af5e1c69386f98a611ffb7c6d11e979d10b9]
Former-commit-id: 857706169b1bfd0f5a1b993b99591b7fd39cf412
Former-commit-id: bb632c5bf2879f4caf16294084f53ea0a215e1eb

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,8 @@
-# Ignore everything
-**
-
-# Allow files and directories
-!/Dockerfile
-!/renv.lock
-!/.Renviron
-!/inst/app
-!/shiny-server.conf
-inst/app/tests
+/data-raw/*
+.git/*
+.Rproj.user/*
+inst/*
+man/*
+renv/*
+tests/*
+example_data.tar.gz
