--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: drugseqr
 Type: Package
 Title: Finds CMAP02/L1000 Compounds That Oppose Gene Expression Signatures.
-Version: 0.2.10
+Version: 0.2.11
 Author: Alex Pickering
 Maintainer: Alex Pickering <alexvpickering@gmail.com>
-Description: Explore single-cell and bulk RNA-seq datasets and run queries against L1000 and CMAP02 signatures.
+Description: Explore single-cell and bulk RNA-seq datasets and run queries 
+    against L1000 and CMAP02 signatures.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
@@ -26,6 +27,7 @@ Imports:
     ggplot2 (>= 3.2.1),
     ggridges (>= 0.5.1),
     GO.db (>= 3.10.0),
+    GEOkallisto (>= 0.1.1),
     hdf5r (>= 1.3.1),
     harmony (>= 1.0),
     igraph (>= 1.2.4.2),
@@ -65,4 +67,5 @@ Depends:
 Remotes: 
     hms-dbmi/drugseqr.data,
     alexvpickering/shinydlplot,
+    alexvpickering/GEOkallisto,
     immunogenomics/harmony
